[gd_scene load_steps=8 format=3 uid="uid://by70h5v81dqg5"]

[ext_resource type="Script" path="res://Scripts/ignitable.gd" id="1_6rx44"]
[ext_resource type="Texture2D" uid="uid://bg14uj57r4170" path="res://Resources/Sprites/Objects/Placeholder_ignitable.png" id="2_kcolp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dto6i"]
size = Vector2(38, 108)

[sub_resource type="Animation" id="Animation_jqisb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ignitable_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_0iaht"]
resource_name = "ignited"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ignitable_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yb0po"]
resource_name = "unlit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ignitable_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ix0jq"]
_data = {
"RESET": SubResource("Animation_jqisb"),
"ignited": SubResource("Animation_0iaht"),
"unlit": SubResource("Animation_yb0po")
}

[node name="Ignitable" type="Area2D"]
script = ExtResource("1_6rx44")

[node name="Ignitable_Detection_Box" type="CollisionShape2D" parent="."]
position = Vector2(14, -7)
shape = SubResource("RectangleShape2D_dto6i")

[node name="Ignitable_Sprites" type="Sprite2D" parent="."]
position = Vector2(14, -7)
scale = Vector2(1.12857, 1.21111)
texture = ExtResource("2_kcolp")
hframes = 2
frame = 1

[node name="Ignite_Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 15.0

[node name="Ignitable_Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ix0jq")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
